app-todo-list/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      containers:
        - name: todolist
          image: 4925k/todolist:v1.0
